--- a/thesis.tex
+++ b/thesis.tex
@@ -3,6 +3,7 @@
 \usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{hyperref}
 
 \author{Терехов Д.Е.}
 \setschool{ШКОЛА ЕСТЕСТВЕННЫХ НАУК ДВФУ}
@@ -12,130 +13,67 @@
     \tableofcontents
     \pagebreak
     \begin{abstract}
-        Текстурный атлас — это большое изображение, полученное склеиванием маленьких текстур. Тем самым экономится память и, что еще более важно, уменьшается количество батчей при отрисовке. В работе решается проблема полигонализации текстур и последующей упаковки в текстурные атласы.
+        В данной работе представлены два эффективных алгоритма: генерация текстурного меша с последующим упрощением и упаковка полигональных текстур в атлас. Оба алгоритма работают с полигонами следующих типов: невыпуклые, полигоны с дырами, полигоны, состоящие из нескольких контуров.
 
-        Упаковка текстур в текстурные атласы является частным случаем задачи об упаковке в контейнеры -- NP-трудная комбинаторная задача. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. Для решения NP-трудной задачи были использованы методы машинного обучения.
+        \textit{Ключевые слова: генерация меша, упрощение полигонов, упаковка в контейнеры.}
     \end{abstract}
-    \section*{Введение}
-        Целью работы является разработка и внедрение алгоритмов полигонализации текстур и упаковки полигональных текстур в атласы для игровой студии <<Game Forest>>\cite{SGFSite}, которая разрабатывает игровой движок с открытым исходным кодом Citrus\cite{CitrusRepo}.
+    \pagebreak
+    {\centering\section*{Введение}}
+    Целью работы является решение задач упрощения полигонов и упаковки, которые играют важную роль в таких прикладных областях, как компьютерная графика, GIS системы, промышленность и т.д. Решение этой задачи также опирается на прикладную область: компьютерную графику, а именно автоматическую генерацию текстурного меша с последующей упаковкой полигональных текстур в текстурные атласы.
 
-        К сожалению, эффективных алгоритмов для полигонализации и упаковки полигональных текстур в открытом доступе нет.
-    \section{Глоссарий}
-    \section{Первый раздел(глава)}
-    \subsection{Обзор предметной области}
-    \subsubsection{Студия <<Game Forest>>}
-    Работа выполняется по заказу студии «Game Forest». «Game Forest» – студия
-по разработке игр на мобильные устройства. Наиболее успешные проекты:
-    \begin{itemize}
-        \item 7 Wonders;
-        \item Gummy Drop;
-        \item Toy Story Drop.
-    \end{itemize}
-    \subsubsection{Citrus Game Engine}
-    Citrus – игровой движок с открытым исходным кодом, распространяемый по лицензии GPL­3.0. репозиторий размещен на платформе Github\cite{CitrusRepo}.Citrus Game Engine состоит из следующих компонент:
-    \begin{itemize}
-        \item Lime -- ядро игрового движка;
-        \item Lemon -- линкер сторонних библиотек;
-        \item Yuzu -- библиотека для сериализации;
-        \item Orange -- сборщик приложений;
-        \item Tangerine -- редактор сцен;
-        \item Kumquat -- генератор кода.
-    \end{itemize}
-    \subsubsection{Текстурный атлас}
-    В компьютерной графике реального времени, текстурный атлас – это изображение, содержащее набор под­изображений, каждое из которых является текстурой для некоторого 2D или 3D объекта. Под­текстуры отображаются на объект, используя UV ­преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. В приложениях нередко используется множество маленьких текстур, причём переключение с одной текстуры на другую является относительно медленным процессом. Поэтому в подобных ситуациях бывает целесообразно применение одного большого изображения вместо множества маленьких.
-    \subsubsection{Полигонализация текстур}
-    Полигонализация текстуры -- процесс обрамления текстуры в полигон и вырезание из текстуры полигональных дыр , не задевая видимые части текстуры. Сложность заключается в нахождении оптимальной полигонализации текстуры, то есть необходимо использовать наименьшее количество вершин и при этом включить в полигон наименьшее количество невидимых пикселей, так как вызов пиксельного шейдера для невидимого пикселя это бесполезная трата ресурсов видеокарты.
+    Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Это позволяет минимизировать затраты по памяти, а также уменьшить количество вызовов на отрисовку. Полигонизация текстур позволяет уменьшить количество вызовов фрагментного шейдера, путем минимизации площади пустых пикселей, входящих в меш. Также это позволяет упаковать больше текстур в атлас, т.к. в полигональном виде они занимают меньшую площадь.
+
+    К сожалению, нет открытых программных пакетов или статей, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведение исследований и создания новых алгоритмов.
+
+    В разделе "Раз" более подробно описывается проблема, подлежащая решению, дается обзор теоретических положений и практических подходов к решению поставленных задач.
+
+    В разделе "Два" предлагается теоретическое решение, формируются критерии оценки эффективности алгоритмов, обоснование их корректности. Также приводится описание вспомогательных и основных алгоритмов.
+
+    В разделе "Три" описывается применение результатов исследования в реальном проекте -- игровом движке с открытым исходным кодом <<Citrus>>.
+
+    \section*{Глоссарий}
+    \section{Задачи упрощения полигонов и упаковки в контейнеры}
+
+    Целью работы является решение задач упрощения полигонов и упаковки, которые играют важную роль в таких прикладных областях, как компьютерная графика, GIS системы, промышленность и т.д. Решение этой задачи также опирается на прикладную область: компьютерную графику, а именно автоматическую генерацию текстурного меша с последующей упаковкой полигональных текстур в текстурные атласы.
+
+    \subsection{Генерация текстурного меша}
+
+    Полигональный меш (полигональная сетка) -- это совокупность вершин, рёбер и граней, которые определяют форму многогранного объекта в трёхмерной компьютерной графике и объёмном моделировании. В двумерной компьютерной графике меши используются для вершинной и скелетной анимации.
+
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=0.5]{images/donut_polygonized.png}
-        \caption{Пример полигонизированной текстуры}
+        \includegraphics[scale=0.5]{images/spine_mesh.png}
+        \caption{2D меш}
     \end{figure}
-    \subsubsection{Упаковка текстур в атласы}
-    Для того чтобы уменьшить количество вызовов на отрисовку текстуры пакуются в текстурные атласы. Чем меньше атласов на то же самое количество текстур, тем:
-    \begin{itemize}
-        \item Игра занимает меньший размер;
-        \item Происходит меньше вызовов на отрисовку (меньше нагрузка на видеокарту);
-        \item Меньше расходуется видеопамяти.
-    \end{itemize}
-    Для упаковки текстур в игровом движке Citrus используется жадный алгоритм. Текстуры пакуются прямоугольной рамкой. Полигонализация текстур способствует уменьшению занимаемой площади, а значит увеличивает плотность упаковки, уменьшает количество атласов.
-    \subsection{Обзор существующих методов решения}
-    Существует платный программный пакет TexturePacker\cite{TexturePacker}, который не раскрывает свои алгоритмы. Также известно о существовании внутреннего решения в компании Playrix\cite{PlayrixArticle} и в редакторе 2D анимаций Spine\cite{Spine} (однако Spine использует заготовленные пользователем полигональные сетки).
 
-    В области bin packing problem и cutting stock problem существуют, основанные на эвристиках\cite{Heuristic1}\cite{Heuristic2}\cite{Heuristic3} или no-fit polygon\cite{NFP1}\cite{NFP2}. Также существуют работы, доказывающие эффективность генетических алгоритмов\cite{Genetica1} и particle swarm optimization (PSO)\cite{PSO1}\cite{PSO2}. Playrix в своей статье\cite{PlayrixArticle} говорят, что для упаковки текстур используют метод пчелиного роя. В некоторых статья сильно ограничивается класс фигур, например, только выпуклые или только прямоугольные. Ни в одной из статей не приводятся действительно интересные варианты упаковки со сложными фигурами, которые были бы схожи с результатами, полученными в TexturePacker. Метод no-fit polygon имеет изъян в виде ограниченного количества ориентаций полигона. Примеры из статей, использующих PSO, работают медленно и не могут быть использованы для сборки игры.
+    Для того, чтобы отрисовать изображение на экране, необходимо пройти через графический конвейер. Обязательными и важнейшими этапами графического конвейера являются исполнение вершинного и фрагментного шейдеров, которые запускаются для каждой вершины и каждого фрагмента (пикселя) соответственно. После вызова фрагментного шейдера полученный цвет фрагмента смешивается с цветом фрагмента в буфере кадра. Многие изображения содержат огромное количество прозрачных пикселей. Вызов фрагментного шейдера для таких пикселей часто является бессмысленным, так как прозрачных пиксель при смешивании никак не повлияет на цвет на экране.
+    Эти размышления приводят к одному из способов оптимизации: создание полигонального меша для изображения таким образом, чтобы минимизировать число вершин и пустых пикселей, занимаемых площадью меша.
 
-    Было решено создать собственное решение, которые отвечало бы следующим требованиям:
-    \begin{itemize}
-        \item Класс фигур ограничивается простыми полигонами с дырками (т.е. не подходят только полигоны, имеющие самопересечения. Такие полигоны необходимо разделить на несколько простых на этапе препроцессинга);
-        \item Время упаковки не должно <<слишком сильно>> увеличиться.
-    \end{itemize}
-    \section{Второй раздел(глава)}
-    ...
-    \subsection{Выделение контура}
-    Алгоритмы выделения контура можно разделить на 3 типа: обход попиксельно, обход повершинно, run-data.
-    \subsubsection{Обход попиксельно}
-    Метод выделения контура обходом попиксельно начинает с какого-либо стартового пикселя и пиксель за пикселем обходит контур изображения предопределенным образом, а затем сохраняет их координаты в памяти в соответствии с порядком трассировки. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing\cite{MoorNeighbor}, radial sweep\cite{RadialSweep} и алгоритм Theo Pavlidis\cite{TheoPavlidis}.
-    \subsubsection{Обход повершинно}
-    Метод выделения контура обходом повершинно отличается от обхода попиксельно лишь тем, что обход осуществляется по границам пикселя.
-    \subsubsection{Run-data}
-    Run-data методы выделения контура проходят по изображению сканирующей линией оставляя определенные метки на встреченном граничном пикселе. Далее по расставленным меткам восстанавливается контур изображения. Примеры методов этой группы: run-type direction code, методы, основанные на PXY таблицы. Отличительной особенностью run-data методов является возможность выделения внешних и внутренних контуров, сохраняя иерархию. Так же способ обхода изображения в некоторых алгоритмах позволяет не держать в памяти изображение целиком.
-
-    Было решено выбрать алгоритм именно из этой группы методов, так как по заданию необходимо выделять дырки на объектах. Выбор пал на алгоритм Suzuki Satoshi \cite{SuzukiAlgorithm}, использующийся в библиотеке OpenCV. Он достаточно прост в реализации, умеет иерархически выделять контуры. Псевдокод выбранного алгоритма приведен ниже:
-    \subsection{Полигонизация}
-    В области полигонизации текстур нет известных алгоритмов, однако в области картографии используются алгоритмы упрощения кривой (на карте с помощью их упрощается береговая линия при отдалении камеры). Самыми известными алгоритмами в этой области являются алгоритмы Visvalingam–Whyatt\cite{VisvalingamWhyatt} и Ramer–Douglas–Peucker\cite{DouglasPeucker}. Из этих алгоритмов были взяты некоторые идеи.
-
-    \subsubsection{Неформальное описание алгоритма}
-        \begin{enumerate}
-            \item Выделить иерархический контур текстуры
-            \item Рассчитать минимальное (по отсекаемой площади) возможную трансформацию для каждой вершины.
-            \item Пока условие выхода не достигнуто и существует минимальная возможная трансформация, то необходимо применить её и исключить из рассмотрения.
-            \item Если минимальная возможная трансформация не существует, то необходимо смерджить 2 полигона таким образом, чтобы удаленных вершин и захваченных прозрачных пикселей было минимальным, и вернуться к шагу 3.
-            \item Если не существует полигонов, которые можно было бы смерджить, то необходимо удалить полигон-дырку так, чтобы количество удаленных вершин и захваченных прозрачных пикселей было минимальным, и вернуться к шагу 3.
-            \item К этому моменты должен остаться один полигон-граница. Необходимо спроецировать точки полигона таким образом, чтобы можно было появилось хотя бы одно минимальное возможное преобразование, и вернуться к шагу три. В противном случае мы достигли либо ббокса изображения либо объемлющего треугольника.
-        \end{enumerate}
-
-    \subsubsection{Преобразования}
-        \begin{enumerate}
-            \item Удаление вогнутого угла для границы или выпуклого для дырки;
-            \item Замена вершины пересечением двух сторон;
-            \item Удаление треугольной дырки.
-        \end{enumerate}
-        \begin{figure}[H]
-            \centering
-            \begin{subfigure}[H]{\linewidth}
-                \centering
-                \includegraphics[scale=2]{images/convex_angle.png}
-                \caption{Удаление вогнутого угла}
-            \end{subfigure}
-            \vskip .5cm
-            \begin{subfigure}[H]{\linewidth}
-                \centering
-                \includegraphics[scale=2]{images/sides_intersection.png}
-                \caption{Пересечение 2 сторон}
-            \end{subfigure}
-        \end{figure}
-    \subsubsection{Мердж полигонов}
-    Рассматриваются все пары полигонов для каждого уровня иерархии. Для каждой пары рассматриваются пары подряд идущих вершин и возможность их соединения. Выбирается пара с минимальным по площади соединением
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\linewidth, keepaspectratio]{images/merge.png}
+        \includegraphics{images/Thunder_approx.png}
+        \caption{Полигональный меш с 10 вершинами}
     \end{figure}
-    \subsubsection{Удаление дыр}
-    На стадии удаления дыр удаляется дыра, которая находится наиболее глубоко в иерархии. Из всех таких дыр удаляется та, которая имеет большее число вершин.
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.8\linewidth, keepaspectratio]{images/remove_hole.png}
-    \end{figure}
-    \subsubsection{Бэкэнд для операций}
-    Для проверки преобразований и их выполнения используется триангуляция Делоне\cite{Delaunay} из бакалаврской работы, также сделанной по заказу студии <<Game Forest>> . Жесткими ребрами задаются границы полигонов. Операцией вставки структурных ребер проверяется возможность преобразования. Преобразования применяются при помощи операций вставки и удаления вершин, а также вставки структурных ребер. Данный подход позволил сильно снизить время на разработку и отладку сложного математического кода, для которого было бы сложнее добиться нужной асимптотики.
-    \subsection{Упаковка}
-    Генетический алгоритм с локальным поиском (memetic algorithm). Методы локального поиска:
-    \begin{itemize}
-        \item Вставить полигон в пустое место
-        \item Вставить полигон в дырку
-        \item Физика
-    \end{itemize}
-    \section{Третий раздел(глава)}
-    \section{Заключение}
+
+    Для GIS систем разработали множество алгоритмов упрощения кривой: алгоритм Ramer–Douglas–Peucker\cite{Ramer}\cite{DouglasPeucker}, алгоритм радиального расстояния\cite{PolylineSimplification}, алгоритм Visvalingam–Whyatt\cite{VisvalingamWhyatt}, упрощение Opheim\cite{Opheim} и Lang\cite{Lang}, алгоритм Zhao–Saalfeld\cite{ZhaoSaalfeld}, алгоритм Reumann-Witkam\cite{ReumannWitkam}.
+
+    Однако в данной работе задача упрощения полигонов применяется в контексте текстурного меша. Ключевыми отличиями данной прикладной задачи от общей является минимизация не только количества вершин, но и площади прозрачных пикселей (или добавочной площади), а также ограничение, которое не позволяет нарушать границы исходных полигонов (контур изображения). Описанные выше алгоритмы можно адаптировать, чтобы они соответствовали ограничению. К сожалению, данные алгоритмы совсем не рассчитаны на минимизацию добавочной площади, а также часто приходят в тупиковую ситуацию, когда все ещё требует уменьшить количество вершин, но возможных трансформаций не существует. Решение данных проблем привело к созданию алгоритма упрощения множества простых полигонов с дырками.
+
+    \subsection{Упаковка текстур в атласы}
+
+    Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Под­текстуры отображаются на объект, используя UV ­преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. В приложениях нередко используется множество маленьких текстур, причём переключение с одной текстуры на другую является относительно медленным процессом. Поэтому в подобных ситуациях целесообразно применение одного большого изображения вместо множества маленьких. Также текстурные атласы помогают сэкономить память при помощи полигональной упаковки и\textbackslash или алгоритмов сжатия.
+
+    Задача упаковки в контейнеры -- NP-трудная комбинаторная задача. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. В данной работе предлагается решение 2D irregular bin packing problem, т.е. упаковка полигональных объектов в прямоугольные контейнеры.
+
+    Для упаковки прямоугольных объектов существует множество эвристических алгоритмов\cite{ThousandWayToPackBin}, которые хорошо показывают себя на практике. В области упаковки полигонов существуют различные подходы.
+
+    No-fit polygon\cite{NofitPolygon}\cite{NofitPolygon2} -- это конструкция, которая определяет все положения, которые могут принимать 2 произвольных многоугольника относительно друг друга так, чтобы они соприкасались, но не перекрывались. Часто методы на основе no-fit polygon используют для решения задачи раскроя на производстве, где форма вырезаемых объектов несложная и заранее известна.
+
+    Swarm intelligence (роевой интеллект) -- метод оптимизации, который описывает коллективное поведение децентрализованной самоорганизующейся системы: колонии светлячков\cite{FireFly}, муравьев\cite{AntColony}, пчел\cite{PlayrixArticle}, particle swarm optimization\cite{PSO}.
+
+    Генетический алгоритм\cite{JAKOBS1996165} -- это эвристический алгоритм поиска, используемый для решения задач оптимизации и моделирования путём случайного подбора, комбинирования и вариации искомых параметров с использованием механизмов, аналогичных естественному отбору в природе.
+
+    К сожалению, результаты прочитанных статей не удовлетворяют нужды упаковки текстур в атласы, поэтому данная работа предлагает собственную реализацию Memetic algorithm -- расширение генетического алгоритма, которое использует локальный поиск для уменьшения вероятности преждевременной сходимости. Разработанный алгоритм способен упаковывать изображения, на которых находятся множество разрозненных объектов с дырами.
     \newpage
     \bibliographystyle{ugost2008ls}
     \bibliography{references}
